terraform/deployments/cluster-services/modules/gatekeeper/test/suite/samples/ingress_allow_duplicate_hostname/allow_different_hosts/case.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-2
  namespace: default-2
spec:
  rules:
  - host: ing-2.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port:
              number: 80
